--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name="com.calebwhang.sunshine.app.DetailActivity"
+            android:label="@string/title_activity_detail">
+        </activity>
+
     </application>
 
 </manifest>
